# xtermwm

./: .gitignore  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac
docs/: xtwm.1
java/: Makefile  build.xml
java/resources/: help.xml  xtwm.properties
java/src/jexer/: TApplication.java  TCheckBox.java  TEditorWidget.java  TEditorWindow.java  TFontChooserWindow.java  TFontChooserWindow.properties  TPanel.java  TScreenOptionsWindow.java  TScreenOptionsWindow.properties  TTerminalWidget.java  TText.java  TWidget.java  TWindow.java
java/src/jexer/backend/: ECMA48Backend.java  ECMA48Terminal.java  GenericBackend.java  MultiBackend.java  SwingTerminal.java  TWindowBackend.java
java/src/jexer/bits/: ColorTheme.java  WidgetUtils.java
java/src/jexer/menu/: TMenu.java  TSubMenu.java
java/src/jexer/net/: TelnetInputStream.java
java/src/jexer/tackboard/: Bitmap.java
java/src/jexer/teditor/: Document.java
java/src/jexer/tterminal/: ECMA48.java
java/src/xtwm/: Main.java  package-info.java
java/src/xtwm/plugins/: BlackHoleScreensaver.java  BlackHoleScreensaver.properties  BlankScreensaver.java  BlankScreensaver.properties  BouncingTextScreensaver.java  BouncingTextScreensaver.properties  Calendar.java  Calendar.properties  DesktopPager.java  DesktopPager.properties  HtopPlugin.java  HtopPlugin.properties  PluginLoader.java  PluginWidget.java  QuickNotes.java  QuickNotes.properties  RainScreensaver.java  (+9 more)
lib/ptypipe/: LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  ptypipe.1  ptypipe.c
(+26 files in other folders)
